--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 					<h4>6</h4>
 					<a target="_blank" href="https://yelloweyes.bandcamp.com/album/immersion-trench-reverie" class="text-wrap">
 						<h2>yellow eyes</h2>
-						<p>reflections of a floating worls<p>
+						<p>immersion trench reverie<p>
 					</a>
 				</div>
 			</section>
